<resources>
    <string name="app_name">KYDmed+ </string>
    <string name="cancer">CANCER</string>
    <string name="press_any_button">Press any button!</string>
    <string name="cause">CAUSE</string>
    <string name="symptom">SYMPTOM</string>
    <string name="know_your_disease">Know Your Disease</string>
    <string name="Cancer">Cancer</string>
    <string name="a_i_d_s">A.I.D.S</string>
    <string name="liver_cirrhosis">Liver Cirrhosis</string>
    <string name="kidney_stone">Kidney Stone</string>
    <string name="brain_tumor">Brain Tumor</string>
    <string name="click_button_below_to_take_hearing_test">Click Button Below To Take Hearing Test</string>
    <string name="get_info">Get Info</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_splash">splash</string>


    <string-array name="symptom_list">
        <item>SELECT SYMPTOM</item>
        <item>Anxiety</item>
        <item>Stomach Ache</item>
        <item>Nausea</item>
        <item>Vomiting</item>
        <item>Fever</item>
        <item>Sudden Weight Loss</item>
        <item>Sweating</item>
        <item>Muscle And Body Pain</item>
        <item>Thirsty Than Usual</item>
        <item>Headaches</item>
        <item>Weakness/Fatigue</item>
        <item>Abdominal Pain</item>
        <item>Muscle Pain</item>
        <item>Dry Cough</item>
        <item>Diarrhoea/Constipation</item>
        <item>Frequent Urination</item>
        <item>Hunger</item>
        <item>Blurred Vision</item>
        <item>Skin Itching</item>
        <item>Chest Pain</item>
        <item>Shortness in Breath</item>
        <item>Dizziness</item>
        <item>Fast Heartbeat</item>
        <item>Indigestion</item>
        <item>Pressure Or Heaviness In Chest</item>

    </string-array>


</resources>
